SET(ANOMANON_SRCS
	packet_cntr.c
	rrd_control.c
	main.c)

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(LibPcap REQUIRED)
FIND_PACKAGE(LibRrd REQUIRED)

INCLUDE_DIRECTORIES(${PCAP_INCLUDE_DIRS} ${LIBRRD_INCLUDE_DIR})

ADD_EXECUTABLE(anomanon ${ANOMANON_SRCS})

TARGET_LINK_LIBRARIES(anomanon ${CMAKE_THREAD_LIBS_INIT} ${PCAP_LIBRARIES} ${LIBRRD_LIBRARY})
